--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Blog Web site created using create-react-app" />
-    <link rel="icon" type="image/png" href="./mem.png">
+    <link rel="icon" type="image/png" href="https://cdn.jsdelivr.net/gh/sansar90/memory_project@master/public/mem.png">
     <title>memoriesBook</title>
   </head>
   <body>
